versions/0.9.1/_sources/refs/_aws-cdk_aws-elasticloadbalancing.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"GIVzkrJFqNmDcIQg309xBbiDkfn7LXo2yOY9y1gASMI="}

@aws-cdk/aws-elasticloadbalancing
=================================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.ElasticLoadBalancing/0.9.1>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.ElasticLoadBalancing" Version="0.9.1" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.ElasticLoadBalancing --version 0.9.1

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.ElasticLoadBalancing" version="0.9.1" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/elasticloadbalancing/0.9.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:elasticloadbalancing:jar:0.9.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="elasticloadbalancing" rev="0.9.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>elasticloadbalancing</artifactId>
           <version>0.9.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:elasticloadbalancing:0.9.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='elasticloadbalancing', version='0.9.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticloadbalancing/v/0.9.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticloadbalancing@0.9.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticloadbalancing": "^0.9.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticloadbalancing@0.9.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticloadbalancing/v/0.9.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticloadbalancing@0.9.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticloadbalancing": "^0.9.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticloadbalancing@0.9.1



.. mdinclude:: ./__aws-cdk_aws-elasticloadbalancing.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-elasticloadbalancing

HealthCheck (interface)
^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: HealthCheck

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.HealthCheck;

      .. code-tab:: javascript

         // HealthCheck is an interface

      .. code-tab:: typescript

         import { HealthCheck } from '@aws-cdk/aws-elasticloadbalancing';



   Describe the health check to a load balancer




   .. py:attribute:: port

      What port number to health check on


      :type: number *(abstract)*


   .. py:attribute:: healthyThreshold

      After how many successful checks is an instance considered healthy


      :type: number or undefined *(abstract)*


   .. py:attribute:: interval

      Number of seconds between health checks


      :type: number or undefined *(abstract)*


   .. py:attribute:: path

      What path to use for HTTP or HTTPS health check (must return 200)  For SSL and TCP health checks, accepting connections is enough to be considered healthy.


      :type: string or undefined *(abstract)*


   .. py:attribute:: protocol

      What protocol to use for health checking  The protocol is automatically determined from the port if it's not supplied.


      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancingProtocol` or undefined *(abstract)*


   .. py:attribute:: timeout

      Health check timeout


      :type: number or undefined *(abstract)*


   .. py:attribute:: unhealthyThreshold

      After how many unsuccessful checks is an instance considered unhealthy


      :type: number or undefined *(abstract)*


ILoadBalancerTarget (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ILoadBalancerTarget

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.ILoadBalancerTarget;

      .. code-tab:: javascript

         // ILoadBalancerTarget is an interface

      .. code-tab:: typescript

         import { ILoadBalancerTarget } from '@aws-cdk/aws-elasticloadbalancing';



   Interface that is going to be implemented by constructs that you can load balance to


   :extends: :py:class:`@aws-cdk/aws-ec2.IConnectable`


   .. py:method:: attachToClassicLB(loadBalancer)

      Attach load-balanced target to a classic ELB


      :param loadBalancer: 
      :type loadBalancer: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancer`
      :abstract: Yes


ListenerPort
^^^^^^^^^^^^

.. py:class:: ListenerPort(securityGroup, defaultPortRange)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.ListenerPort;

      .. code-tab:: javascript

         const { ListenerPort } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { ListenerPort } from '@aws-cdk/aws-elasticloadbalancing';



   Reference to a listener's port just created.  This implements IConnectable with a default port (the port that an ELB listener was just created on) for a given security group so that it can be conveniently used just like any Connectable. E.g:        const listener = elb.addListener(...);        listener.connections.allowDefaultPortFromAnyIPv4();       // or       instance.connections.allowToDefaultPort(listener);


   :implements: :py:class:`@aws-cdk/aws-ec2.IConnectable`
   :param securityGroup: 
   :type securityGroup: :py:class:`@aws-cdk/aws-ec2.SecurityGroupRef`
   :param defaultPortRange: 
   :type defaultPortRange: :py:class:`@aws-cdk/aws-ec2.IPortRange`

   .. py:attribute:: connections

      :type: :py:class:`@aws-cdk/aws-ec2.Connections` *(readonly)*


LoadBalancer
^^^^^^^^^^^^

.. py:class:: LoadBalancer(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancer;

      .. code-tab:: javascript

         const { LoadBalancer } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancer } from '@aws-cdk/aws-elasticloadbalancing';



   A load balancer with a single listener  Routes to a fleet of of instances in a VPC.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`@aws-cdk/aws-ec2.IConnectable`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerProps`

   .. py:method:: addListener(listener) -> @aws-cdk/aws-elasticloadbalancing.ListenerPort

      Add a backend to the load balancer


      :param listener: 
      :type listener: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerListener`
      :return: A ListenerPort object that controls connections to the listener port
      :rtype: :py:class:`~@aws-cdk/aws-elasticloadbalancing.ListenerPort`


   .. py:method:: addTarget(target)

      :param target: 
      :type target: :py:class:`~@aws-cdk/aws-elasticloadbalancing.ILoadBalancerTarget`


   .. py:attribute:: connections

      Control all connections from and to this load balancer


      :type: :py:class:`@aws-cdk/aws-ec2.Connections` *(readonly)*


   .. py:attribute:: listenerPorts

      An object controlling specifically the connections for each listener added to this load balancer


      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.ListenerPort`[] *(readonly)*


   .. py:attribute:: loadBalancerCanonicalHostedZoneName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerCanonicalHostedZoneName` *(readonly)*


   .. py:attribute:: loadBalancerDnsName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerDnsName` *(readonly)*


   .. py:attribute:: loadBalancerName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerName` *(readonly)*


   .. py:attribute:: loadBalancerSourceSecurityGroupGroupName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerSourceSecurityGroupGroupName` *(readonly)*


   .. py:attribute:: loadBalancerSourceSecurityGroupOwnerAlias

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerSourceSecurityGroupOwnerAlias` *(readonly)*


LoadBalancerCanonicalHostedZoneName
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerCanonicalHostedZoneName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerCanonicalHostedZoneName;

      .. code-tab:: javascript

         const { LoadBalancerCanonicalHostedZoneName } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerCanonicalHostedZoneName } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerCanonicalHostedZoneNameId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerCanonicalHostedZoneNameId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerCanonicalHostedZoneNameId;

      .. code-tab:: javascript

         const { LoadBalancerCanonicalHostedZoneNameId } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerCanonicalHostedZoneNameId } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerDnsName
^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerDnsName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerDnsName;

      .. code-tab:: javascript

         const { LoadBalancerDnsName } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerDnsName } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerListener (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerListener

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerListener;

      .. code-tab:: javascript

         // LoadBalancerListener is an interface

      .. code-tab:: typescript

         import { LoadBalancerListener } from '@aws-cdk/aws-elasticloadbalancing';



   Add a backend to the load balancer




   .. py:attribute:: externalPort

      External listening port


      :type: number *(abstract)*


   .. py:attribute:: allowConnectionsFrom

      Allow connections to the load balancer from the given set of connection peers  By default, connections will be allowed from anywhere. Set this to an empty list to deny connections, or supply a custom list of peers to allow connections from (IP ranges or security groups).


      :type: :py:class:`@aws-cdk/aws-ec2.IConnectable`[] or undefined *(abstract)*


   .. py:attribute:: externalProtocol

      What public protocol to use for load balancing  Either 'tcp', 'ssl', 'http' or 'https'.  May be omitted if the external port is either 80 or 443.


      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancingProtocol` or undefined *(abstract)*


   .. py:attribute:: internalPort

      Instance listening port  Same as the externalPort if not specified.


      :type: number or undefined *(abstract)*


   .. py:attribute:: internalProtocol

      What public protocol to use for load balancing  Either 'tcp', 'ssl', 'http' or 'https'.  May be omitted if the internal port is either 80 or 443.  The instance protocol is 'tcp' if the front-end protocol is 'tcp' or 'ssl', the instance protocol is 'http' if the front-end protocol is 'https'.


      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancingProtocol` or undefined *(abstract)*


   .. py:attribute:: policyNames

      SSL policy names


      :type: string[] or undefined *(abstract)*


   .. py:attribute:: sslCertificateId

      ID of SSL certificate


      :type: :py:class:`@aws-cdk/cdk.Arn` or undefined *(abstract)*


LoadBalancerName
^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerName;

      .. code-tab:: javascript

         const { LoadBalancerName } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerName } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerProps;

      .. code-tab:: javascript

         // LoadBalancerProps is an interface

      .. code-tab:: typescript

         import { LoadBalancerProps } from '@aws-cdk/aws-elasticloadbalancing';



   Construction properties for a LoadBalancer




   .. py:attribute:: vpc

      VPC network of the fleet instances


      :type: :py:class:`@aws-cdk/aws-ec2.VpcNetworkRef` *(abstract)*


   .. py:attribute:: healthCheck

      Health check settings for the load balancing targets.  Not required but recommended.


      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.HealthCheck` or undefined *(abstract)*


   .. py:attribute:: internetFacing

      Whether this is an internet-facing Load Balancer  This controls whether the LB has a public IP address assigned. It does not open up the Load Balancer's security groups to public internet access.


      :type: boolean or undefined *(abstract)*


   .. py:attribute:: listeners

      What listeners to set up for the load balancer.  Can also be added by .addListener()


      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerListener`[] or undefined *(abstract)*


   .. py:attribute:: targets

      What targets to load balance to.  Can also be added by .addTarget()


      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.ILoadBalancerTarget`[] or undefined *(abstract)*


LoadBalancerSourceSecurityGroupGroupName
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerSourceSecurityGroupGroupName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerSourceSecurityGroupGroupName;

      .. code-tab:: javascript

         const { LoadBalancerSourceSecurityGroupGroupName } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerSourceSecurityGroupGroupName } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerSourceSecurityGroupOwnerAlias
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerSourceSecurityGroupOwnerAlias(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancerSourceSecurityGroupOwnerAlias;

      .. code-tab:: javascript

         const { LoadBalancerSourceSecurityGroupOwnerAlias } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancerSourceSecurityGroupOwnerAlias } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancingProtocol (enum)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancingProtocol

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.LoadBalancingProtocol;

      .. code-tab:: javascript

         const { LoadBalancingProtocol } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { LoadBalancingProtocol } from '@aws-cdk/aws-elasticloadbalancing';



   .. py:data:: Tcp

   .. py:data:: Ssl

   .. py:data:: Http

   .. py:data:: Https



cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-elasticloadbalancing.cloudformation

LoadBalancerResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: LoadBalancerResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource;

      .. code-tab:: javascript

         const { cloudformation.LoadBalancerResource } = require('@aws-cdk/aws-elasticloadbalancing');

      .. code-tab:: typescript

         import { cloudformation.LoadBalancerResource } from '@aws-cdk/aws-elasticloadbalancing';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LoadBalancerResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LoadBalancerResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: loadBalancerCanonicalHostedZoneName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerCanonicalHostedZoneName` *(readonly)*


   .. py:attribute:: loadBalancerCanonicalHostedZoneNameId

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerCanonicalHostedZoneNameId` *(readonly)*


   .. py:attribute:: loadBalancerDnsName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerDnsName` *(readonly)*


   .. py:attribute:: loadBalancerSourceSecurityGroupGroupName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerSourceSecurityGroupGroupName` *(readonly)*


   .. py:attribute:: loadBalancerSourceSecurityGroupOwnerAlias

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerSourceSecurityGroupOwnerAlias` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancing.LoadBalancerName` *(readonly)*

   .. py:class:: AccessLoggingPolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.AccessLoggingPolicyProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.AccessLoggingPolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.AccessLoggingPolicyProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: enabled

         ``LoadBalancerResource.AccessLoggingPolicyProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: s3BucketName

         ``LoadBalancerResource.AccessLoggingPolicyProperty.S3BucketName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-s3bucketname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: emitInterval

         ``LoadBalancerResource.AccessLoggingPolicyProperty.EmitInterval``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-emitinterval


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


      .. py:attribute:: s3BucketPrefix

         ``LoadBalancerResource.AccessLoggingPolicyProperty.S3BucketPrefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-accessloggingpolicy.html#cfn-elb-accessloggingpolicy-s3bucketprefix


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: AppCookieStickinessPolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.AppCookieStickinessPolicyProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.AppCookieStickinessPolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.AppCookieStickinessPolicyProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: cookieName

         ``LoadBalancerResource.AppCookieStickinessPolicyProperty.CookieName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-AppCookieStickinessPolicy.html#cfn-elb-appcookiestickinesspolicy-cookiename


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: policyName

         ``LoadBalancerResource.AppCookieStickinessPolicyProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-AppCookieStickinessPolicy.html#cfn-elb-appcookiestickinesspolicy-policyname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:class:: ConnectionDrainingPolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.ConnectionDrainingPolicyProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.ConnectionDrainingPolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.ConnectionDrainingPolicyProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: enabled

         ``LoadBalancerResource.ConnectionDrainingPolicyProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-connectiondrainingpolicy.html#cfn-elb-connectiondrainingpolicy-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: timeout

         ``LoadBalancerResource.ConnectionDrainingPolicyProperty.Timeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-connectiondrainingpolicy.html#cfn-elb-connectiondrainingpolicy-timeout


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: ConnectionSettingsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.ConnectionSettingsProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.ConnectionSettingsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.ConnectionSettingsProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: idleTimeout

         ``LoadBalancerResource.ConnectionSettingsProperty.IdleTimeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-connectionsettings.html#cfn-elb-connectionsettings-idletimeout


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:class:: HealthCheckProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.HealthCheckProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.HealthCheckProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.HealthCheckProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: healthyThreshold

         ``LoadBalancerResource.HealthCheckProperty.HealthyThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-healthythreshold


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: interval

         ``LoadBalancerResource.HealthCheckProperty.Interval``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-interval


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: target

         ``LoadBalancerResource.HealthCheckProperty.Target``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-target


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: timeout

         ``LoadBalancerResource.HealthCheckProperty.Timeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-timeout


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: unhealthyThreshold

         ``LoadBalancerResource.HealthCheckProperty.UnhealthyThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-health-check.html#cfn-elb-healthcheck-unhealthythreshold


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


   .. py:class:: LBCookieStickinessPolicyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.LBCookieStickinessPolicyProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.LBCookieStickinessPolicyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.LBCookieStickinessPolicyProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: cookieExpirationPeriod

         ``LoadBalancerResource.LBCookieStickinessPolicyProperty.CookieExpirationPeriod``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-LBCookieStickinessPolicy.html#cfn-elb-lbcookiestickinesspolicy-cookieexpirationperiod


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


      .. py:attribute:: policyName

         ``LoadBalancerResource.LBCookieStickinessPolicyProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-LBCookieStickinessPolicy.html#cfn-elb-lbcookiestickinesspolicy-policyname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: ListenersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.ListenersProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.ListenersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.ListenersProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: instancePort

         ``LoadBalancerResource.ListenersProperty.InstancePort``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-instanceport


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: loadBalancerPort

         ``LoadBalancerResource.ListenersProperty.LoadBalancerPort``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-loadbalancerport


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: protocol

         ``LoadBalancerResource.ListenersProperty.Protocol``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-protocol


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: instanceProtocol

         ``LoadBalancerResource.ListenersProperty.InstanceProtocol``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-instanceprotocol


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


      .. py:attribute:: policyNames

         ``LoadBalancerResource.ListenersProperty.PolicyNames``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-policynames


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined *(abstract)*


      .. py:attribute:: sslCertificateId

         ``LoadBalancerResource.ListenersProperty.SSLCertificateId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-listener.html#cfn-ec2-elb-listener-sslcertificateid


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:class:: PoliciesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancing;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResource.PoliciesProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.PoliciesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.PoliciesProperty } from '@aws-cdk/aws-elasticloadbalancing';





      .. py:attribute:: attributes

         ``LoadBalancerResource.PoliciesProperty.Attributes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-attributes


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (json or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] *(abstract)*


      .. py:attribute:: policyName

         ``LoadBalancerResource.PoliciesProperty.PolicyName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-policyname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: policyType

         ``LoadBalancerResource.PoliciesProperty.PolicyType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-policytype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` *(abstract)*


      .. py:attribute:: instancePorts

         ``LoadBalancerResource.PoliciesProperty.InstancePorts``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-instanceports


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined *(abstract)*


      .. py:attribute:: loadBalancerPorts

         ``LoadBalancerResource.PoliciesProperty.LoadBalancerPorts``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-policy.html#cfn-ec2-elb-policy-loadbalancerports


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined *(abstract)*



LoadBalancerResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LoadBalancerResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancing;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancing.cloudformation.LoadBalancerResourceProps;

      .. code-tab:: javascript

         // cloudformation.LoadBalancerResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LoadBalancerResourceProps } from '@aws-cdk/aws-elasticloadbalancing';





   .. py:attribute:: listeners

      ``AWS::ElasticLoadBalancing::LoadBalancer.Listeners``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-listeners


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.ListenersProperty` or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] *(abstract)*


   .. py:attribute:: accessLoggingPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.AccessLoggingPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-accessloggingpolicy


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.AccessLoggingPolicyProperty` or undefined *(abstract)*


   .. py:attribute:: appCookieStickinessPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.AppCookieStickinessPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-appcookiestickinesspolicy


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.AppCookieStickinessPolicyProperty`)[] or undefined *(abstract)*


   .. py:attribute:: availabilityZones

      ``AWS::ElasticLoadBalancing::LoadBalancer.AvailabilityZones``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-availabilityzones


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined *(abstract)*


   .. py:attribute:: connectionDrainingPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.ConnectionDrainingPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-connectiondrainingpolicy


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.ConnectionDrainingPolicyProperty` or undefined *(abstract)*


   .. py:attribute:: connectionSettings

      ``AWS::ElasticLoadBalancing::LoadBalancer.ConnectionSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-connectionsettings


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.ConnectionSettingsProperty` or undefined *(abstract)*


   .. py:attribute:: crossZone

      ``AWS::ElasticLoadBalancing::LoadBalancer.CrossZone``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-crosszone


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: healthCheck

      ``AWS::ElasticLoadBalancing::LoadBalancer.HealthCheck``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-healthcheck


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.HealthCheckProperty` or undefined *(abstract)*


   .. py:attribute:: instances

      ``AWS::ElasticLoadBalancing::LoadBalancer.Instances``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-instances


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined *(abstract)*


   .. py:attribute:: lbCookieStickinessPolicy

      ``AWS::ElasticLoadBalancing::LoadBalancer.LBCookieStickinessPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-lbcookiestickinesspolicy


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.LBCookieStickinessPolicyProperty`)[] or undefined *(abstract)*


   .. py:attribute:: loadBalancerName

      ``AWS::ElasticLoadBalancing::LoadBalancer.LoadBalancerName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-elbname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: policies

      ``AWS::ElasticLoadBalancing::LoadBalancer.Policies``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-policies


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancing.cloudformation.LoadBalancerResource.PoliciesProperty`)[] or undefined *(abstract)*


   .. py:attribute:: scheme

      ``AWS::ElasticLoadBalancing::LoadBalancer.Scheme``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-scheme


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined *(abstract)*


   .. py:attribute:: securityGroups

      ``AWS::ElasticLoadBalancing::LoadBalancer.SecurityGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-securitygroups


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined *(abstract)*


   .. py:attribute:: subnets

      ``AWS::ElasticLoadBalancing::LoadBalancer.Subnets``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-ec2-elb-subnets


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined *(abstract)*


   .. py:attribute:: tags

      ``AWS::ElasticLoadBalancing::LoadBalancer.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb.html#cfn-elasticloadbalancing-loadbalancer-tags


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`@aws-cdk/cdk.Tag`)[] or undefined *(abstract)*



.. py:currentmodule:: @aws-cdk/aws-elasticloadbalancing

